# Streamline-visualization-tool

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CopyShaders.cmake  README.md  testProj.sln
streamline-visualization/src/: CMakeLists.txt  Source.cpp  imgui.ini
streamline-visualization/src/core/: DataReader.cpp  StreamlineRenderer.cpp  StreamlineTracer.cpp  VectorField.cpp
streamline-visualization/src/data/: toy-evec.nii  toy-map.nii
streamline-visualization/src/extra/: glad.c  glad.h  imgui.ini
streamline-visualization/src/include/: Constants.h  DataReader.h  MouseSampler.h  Shader.h  StreamlineRenderer.h  StreamlineTracer.h  VectorField.h
streamline-visualization/src/shaders/: FragShader1.fs  anatomicalFragment.fs  anatomicalVertex.vs  glyphVertex.vs  streamlineFragment.fs  vertexShader1.vs
testProj/: DataReader.cpp  DataReader.h  FragShader1.fs  Nifti1.h  Shader.h  Source.cpp  glad.c  testProj.vcxproj  testProj.vcxproj.filters  vertexShader1.vs
